--- a/ml/multi_model.ipynb
+++ b/ml/multi_model.ipynb
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1098,10 +1098,10 @@
       "             nan             nan             nan             nan\n",
       "             nan             nan             nan             nan\n",
       "             nan             nan             nan             nan\n",
-      " -7.11315074e+10 -7.04991098e+10 -7.10786238e+10 -7.05524651e+10\n",
-      " -7.01203841e+10 -7.03537776e+10 -7.00432014e+10 -7.04966003e+10\n",
-      " -7.06318420e+10 -7.05767264e+10 -7.03411672e+10 -7.05663657e+10\n",
-      " -7.03782318e+10 -6.93943823e+10 -7.03491437e+10 -6.92420363e+10]\n",
+      " -5.79209523e+10 -5.89171361e+10 -5.78365362e+10 -5.88990082e+10\n",
+      " -5.78882902e+10 -5.79793130e+10 -5.78933845e+10 -5.79186709e+10\n",
+      " -5.78617869e+10 -5.83395607e+10 -5.78414344e+10 -5.82733785e+10\n",
+      " -5.81103149e+10 -5.76480788e+10 -5.80820721e+10 -5.77564464e+10]\n",
       "  warnings.warn(\n",
       "/Users/cyriljulliard/simplon/debugMoviePopularityPred/env/lib/python3.10/site-packages/feature_engine/encoding/base_encoder.py:260: UserWarning: During the encoding, NaN values were introduced in the feature(s) studio.\n",
       "  warnings.warn(\n"
@@ -1112,12 +1112,12 @@
      "output_type": "stream",
      "text": [
       "Meilleurs hyperparamètres trouvés:\n",
-      "{'catboostregressor__depth': 7, 'catboostregressor__l2_leaf_reg': 0.6, 'catboostregressor__learning_rate': 0.055, 'catboostregressor__n_estimators': 154, 'catboostregressor__random_strength': 0.31}\n",
-      "Meilleur score sur les données d'entraînement: -69242036321.69363\n",
-      "Score : 0.7467813789315575\n",
-      "Score R2 : 0.7467813789315575\n",
-      "Score RMSE 218489.84007084306\n",
-      "Score MAE : 125938.92908208595\n"
+      "{'catboostregressor__depth': 7, 'catboostregressor__l2_leaf_reg': 0.6, 'catboostregressor__learning_rate': 0.055, 'catboostregressor__n_estimators': 149, 'catboostregressor__random_strength': 0.31}\n",
+      "Meilleur score sur les données d'entraînement: -57648078789.39229\n",
+      "Score : 0.8046751233475351\n",
+      "Score R2 : 0.8046751233475351\n",
+      "Score RMSE 191894.35819530292\n",
+      "Score MAE : 115031.1352427277\n"
      ]
     },
     {
@@ -1224,12 +1224,12 @@
     "print(\"Score :\", score)\n",
     "print(\"Score R2 :\", r2)\n",
     "print(\"Score RMSE\", rmse)\n",
-    "print(\"Score MAE :\", mae)\n"
+    "print(\"Score MAE :\", mae) \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1267,47 +1267,83 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>9</th>\n",
        "      <td>salles_fr</td>\n",
-       "      <td>51.816339</td>\n",
+       "      <td>42.255892</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>11</th>\n",
+       "      <td>entrees_usa</td>\n",
+       "      <td>16.624229</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
        "      <td>annee</td>\n",
-       "      <td>15.139464</td>\n",
+       "      <td>10.202848</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>7</th>\n",
+       "      <td>budget</td>\n",
+       "      <td>6.414887</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
        "      <td>duree</td>\n",
-       "      <td>12.474604</td>\n",
+       "      <td>5.809983</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>studio</td>\n",
-       "      <td>8.807988</td>\n",
+       "      <td>genres</td>\n",
+       "      <td>4.991273</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>genres</td>\n",
-       "      <td>8.631387</td>\n",
+       "      <td>franchise</td>\n",
+       "      <td>3.990668</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>studio</td>\n",
+       "      <td>3.989902</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>origine</td>\n",
+       "      <td>2.134229</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>is_compositeur</td>\n",
+       "      <td>1.844360</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>pegi_usa</td>\n",
+       "      <td>1.410576</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>origine</td>\n",
-       "      <td>3.130219</td>\n",
+       "      <td>pegi_fr</td>\n",
+       "      <td>0.331153</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    features      score\n",
-       "4  salles_fr  51.816339\n",
-       "5      annee  15.139464\n",
-       "3      duree  12.474604\n",
-       "1     studio   8.807988\n",
-       "0     genres   8.631387\n",
-       "2    origine   3.130219"
+       "          features      score\n",
+       "9        salles_fr  42.255892\n",
+       "11     entrees_usa  16.624229\n",
+       "10           annee  10.202848\n",
+       "7           budget   6.414887\n",
+       "8            duree   5.809983\n",
+       "1           genres   4.991273\n",
+       "0        franchise   3.990668\n",
+       "4           studio   3.989902\n",
+       "6          origine   2.134229\n",
+       "5   is_compositeur   1.844360\n",
+       "3         pegi_usa   1.410576\n",
+       "2          pegi_fr   0.331153"
       ]
      },
      "metadata": {},
